Fix word wrap on site title

--- a/.dev/assets/shared/css/header/header__titles.css
+++ b/.dev/assets/shared/css/header/header__titles.css
@@ -37,6 +37,7 @@
 	line-height: inherit;
 	margin: 0;
 	text-transform: var(--theme-site-title--text-transform);
+	white-space: nowrap;
 }
 
 .site-description {
